zapomniałem do poprzedniego commita dodać

--- a/projekt_2/projekt_2.ipynb
+++ b/projekt_2/projekt_2.ipynb
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -106,13 +106,52 @@
       "        [0., 1., 0.],\n",
       "        [0., 0., 1.],\n",
       "        [1., 0., 0.]])\n",
-      "tensor([[0., 0., 1.],\n",
-      "        [0., 1., 0.],\n",
-      "        [0., 0., 1.],\n",
-      "        ...,\n",
-      "        [0., 1., 0.],\n",
-      "        [0., 1., 0.],\n",
-      "        [0., 1., 0.]])\n"
+      "tensor([2., 1., 2., 2., 2., 2., 1., 0., 1., 1., 1., 2., 0., 2., 1., 1., 2., 1.,\n",
+      "        1., 1., 1., 1., 0., 1., 1., 2., 0., 1., 0., 1., 1., 1., 2., 2., 1., 1.,\n",
+      "        1., 1., 0., 1., 1., 1., 2., 1., 1., 1., 1., 1., 1., 0., 1., 1., 1., 2.,\n",
+      "        1., 2., 0., 1., 1., 1., 1., 1., 1., 1., 1., 0., 1., 1., 2., 1., 1., 1.,\n",
+      "        1., 1., 2., 0., 2., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 0., 1.,\n",
+      "        1., 1., 1., 1., 1., 2., 2., 0., 1., 0., 1., 1., 1., 1., 1., 1., 1., 2.,\n",
+      "        0., 1., 0., 1., 2., 1., 1., 1., 1., 1., 0., 1., 1., 1., 0., 2., 1., 2.,\n",
+      "        0., 0., 1., 1., 1., 1., 1., 1., 0., 1., 1., 1., 2., 2., 1., 1., 1., 0.,\n",
+      "        1., 0., 1., 0., 0., 1., 0., 1., 2., 1., 1., 1., 1., 1., 1., 1., 0., 1.,\n",
+      "        1., 1., 1., 1., 0., 2., 0., 1., 1., 2., 1., 2., 1., 0., 1., 1., 1., 1.,\n",
+      "        2., 1., 1., 2., 1., 1., 0., 1., 0., 0., 1., 1., 1., 1., 1., 1., 1., 1.,\n",
+      "        1., 0., 1., 0., 1., 1., 2., 1., 1., 1., 1., 1., 1., 1., 2., 1., 1., 1.,\n",
+      "        2., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 2., 1., 0., 2., 1., 1., 1.,\n",
+      "        1., 1., 1., 1., 1., 1., 0., 1., 1., 0., 1., 1., 0., 2., 1., 1., 1., 2.,\n",
+      "        1., 1., 1., 2., 2., 1., 1., 1., 2., 1., 1., 1., 2., 1., 0., 1., 1., 1.,\n",
+      "        1., 1., 1., 1., 1., 1., 0., 1., 2., 1., 2., 2., 1., 1., 1., 1., 1., 1.,\n",
+      "        1., 1., 2., 2., 1., 2., 1., 1., 1., 1., 0., 1., 2., 1., 1., 1., 2., 1.,\n",
+      "        1., 1., 1., 1., 1., 1., 0., 1., 1., 2., 2., 1., 1., 1., 1., 1., 1., 1.,\n",
+      "        1., 1., 2., 1., 1., 1., 1., 1., 0., 1., 1., 2., 1., 1., 1., 1., 1., 0.,\n",
+      "        1., 1., 1., 1., 1., 1., 1., 1., 1., 0., 1., 1., 0., 0., 1., 1., 0., 1.,\n",
+      "        1., 1., 2., 1., 1., 1., 0., 1., 1., 1., 1., 1., 0., 1., 0., 1., 1., 1.,\n",
+      "        1., 1., 1., 0., 1., 1., 1., 0., 0., 0., 0., 1., 1., 1., 1., 1., 1., 2.,\n",
+      "        1., 1., 1., 0., 2., 0., 1., 1., 1., 1., 1., 1., 1., 0., 1., 1., 1., 0.,\n",
+      "        1., 2., 2., 1., 1., 0., 1., 1., 2., 1., 1., 0., 1., 1., 1., 1., 1., 2.,\n",
+      "        2., 1., 1., 1., 1., 1., 1., 1., 2., 1., 0., 1., 0., 2., 1., 2., 1., 0.,\n",
+      "        1., 0., 1., 1., 0., 1., 1., 2., 1., 2., 0., 1., 0., 1., 1., 1., 0., 1.,\n",
+      "        0., 0., 2., 2., 1., 1., 0., 1., 0., 1., 1., 1., 1., 1., 1., 1., 1., 1.,\n",
+      "        1., 0., 0., 1., 1., 1., 1., 1., 0., 1., 1., 2., 0., 1., 0., 1., 2., 1.,\n",
+      "        1., 1., 2., 1., 2., 1., 0., 1., 2., 1., 1., 1., 2., 1., 1., 1., 1., 1.,\n",
+      "        0., 1., 1., 1., 2., 1., 1., 1., 1., 0., 0., 1., 1., 0., 1., 1., 1., 1.,\n",
+      "        2., 0., 1., 1., 0., 2., 1., 1., 2., 1., 1., 2., 1., 1., 1., 1., 0., 1.,\n",
+      "        1., 1., 1., 1., 2., 1., 1., 2., 1., 2., 1., 1., 1., 0., 1., 1., 1., 1.,\n",
+      "        0., 1., 1., 0., 1., 1., 1., 0., 1., 1., 1., 2., 1., 1., 1., 1., 1., 1.,\n",
+      "        1., 2., 1., 1., 0., 2., 1., 1., 1., 1., 1., 0., 0., 1., 1., 1., 2., 1.,\n",
+      "        0., 1., 2., 1., 1., 1., 1., 1., 1., 1., 1., 0., 1., 0., 1., 0., 1., 1.,\n",
+      "        0., 1., 1., 1., 0., 1., 1., 1., 1., 1., 1., 1., 2., 1., 2., 0., 1., 1.,\n",
+      "        1., 1., 1., 1., 1., 1., 1., 1., 0., 2., 2., 1., 1., 1., 1., 2., 1., 2.,\n",
+      "        1., 1., 0., 1., 1., 0., 1., 1., 2., 1., 1., 1., 2., 1., 1., 1., 1., 1.,\n",
+      "        0., 1., 1., 1., 1., 1., 0., 1., 1., 1., 2., 1., 1., 1., 1., 1., 1., 1.,\n",
+      "        0., 1., 1., 2., 1., 1., 0., 1., 1., 0., 1., 1., 1., 1., 2., 1., 1., 1.,\n",
+      "        0., 0., 1., 1., 1., 1., 1., 1., 0., 1., 1., 2., 0., 1., 1., 1., 1., 0.,\n",
+      "        1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 2., 1., 1.,\n",
+      "        1., 1., 1., 2., 1., 1., 2., 1., 1., 0., 1., 0., 1., 1., 1., 1., 0., 1.,\n",
+      "        1., 1., 2., 1., 2., 1., 1., 1., 1., 1., 1., 1., 1., 1., 0., 1., 1., 1.,\n",
+      "        1., 1., 0., 2., 1., 1., 1., 1., 0., 1., 1., 1., 1., 1., 1., 1., 0., 1.,\n",
+      "        1., 1., 0., 1., 1., 1., 2., 1., 1., 1., 2., 0., 1., 1., 1.])\n"
      ]
     }
    ],
@@ -122,7 +161,7 @@
     "X_train = torch.tensor(X_train, dtype=torch.float32)\n",
     "y_train = torch.tensor(y_train, dtype=torch.long)\n",
     "X_test = torch.tensor(X_test, dtype=torch.float32)\n",
-    "y_test = torch.tensor(y_test, dtype=torch.long)\n",
+    "y_test = torch.tensor(y_test, dtype=torch.float32)\n",
     "\n",
     "tensor_list = []\n",
     "for price in y_train:\n",
@@ -135,16 +174,18 @@
     "\n",
     "y_train = torch.stack(tensor_list)\n",
     "\n",
-    "tensor_list = []\n",
-    "for price in y_test:\n",
+    "# tensor_list = []\n",
+    "for idx, price in enumerate(y_test):\n",
     "    if price <= 100000:\n",
-    "        tensor_list.append(torch.tensor([1.0, 0.0, 0.0]))\n",
+    "        y_test[idx] = 0\n",
     "    elif price > 350000:\n",
-    "        tensor_list.append(torch.tensor([0.0, 0.0, 1.0]))\n",
+    "        y_test[idx] = 2\n",
+    "        # tensor_list.append(torch.tensor([0.0, 0.0, 1.0]))\n",
     "    else:\n",
-    "        tensor_list.append(torch.tensor([0.0, 1.0, 0.0]))\n",
+    "        y_test[idx] = 1\n",
+    "        # tensor_list.append(torch.tensor([0.0, 1.0, 0.0]))\n",
     "\n",
-    "y_test = torch.stack(tensor_list)\n",
+    "# y_test = torch.stack(tensor_list)\n",
     "print(y_train)\n",
     "print(y_test)\n",
     "\n",
@@ -261,14 +302,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy of the model: 252.73%\n"
+      "Accuracy of the model: 82.42%\n"
      ]
     }
    ],
@@ -296,13 +337,16 @@
     "        # Determine prediction of model on dev set\n",
     "        data_inputs, data_labels = data_inputs.to(device), data_labels.to(device)\n",
     "        preds = model(data_inputs)\n",
+    "        class_preds = torch.empty(len(data_labels), dtype=torch.float32, device='cuda')\n",
+    "        for idx, pred in enumerate(preds):\n",
+    "            class_preds[idx] = torch.argmax(pred)\n",
     "        # preds = preds.squeeze(dim=1)\n",
-    "        preds = torch.sigmoid(preds) # Sigmoid to map predictions between 0 and 1\n",
+    "        # preds = torch.sigmoid(preds) # Sigmoid to map predictions between 0 and 1\n",
     "        pred_labels = (preds >= 0.5).long() # Binarize predictions to 0 and 1\n",
     "\n",
     "        # Keep records of predictions for the accuracy metric (true_preds=TP+TN, num_preds=TP+TN+FP+FN)\n",
-    "        # true_preds += (pred_labels == data_labels).sum()\n",
-    "        # num_preds += data_labels.shape[0]\n",
+    "        true_preds += (class_preds == data_labels).sum()\n",
+    "        num_preds += data_labels.shape[0]\n",
     "\n",
     "acc = true_preds / num_preds\n",
     "print(f\"Accuracy of the model: {100.0*acc:4.2f}%\")"
