--- a/projekt_2/projekt_2.ipynb
+++ b/projekt_2/projekt_2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -48,16 +48,12 @@
     "pd_TimeToBusStop = pd.get_dummies(data['TimeToBusStop'],  dtype=float)\n",
     "data_encoded = pd.concat([pd_HallwayTypepd,pd_HeatingType ,pd_AptManageType,pd_SubwayStation,pd_TimeToSubway,pd_TimeToBusStop , data_dropped], axis=1, join='outer')\n",
     "X = data_encoded.drop(columns=['SalePrice']).values\n",
-    "Y = data_encoded['SalePrice'].values\n",
-    "print(X)\n",
-    "print(Y)\n",
-    "print(X.shape)\n",
-    "print(Y.shape)"
+    "Y = data_encoded['SalePrice'].values"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -86,13 +82,12 @@
     "test_data_encoded = pd.concat([pd_HallwayTypepd,pd_HeatingType ,pd_AptManageType,pd_SubwayStation,pd_TimeToSubway,pd_TimeToBusStop , test_data_dropped], axis=1, join='outer')\n",
     "\n",
     "test_data = test_data_encoded.astype('float32')\n",
-    "test_data = torch.from_numpy(test_data.values[:,:])\n",
-    "print(test_data)"
+    "test_data = torch.from_numpy(test_data.values[:,:])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -174,30 +169,25 @@
     "\n",
     "y_train = torch.stack(tensor_list)\n",
     "\n",
-    "# tensor_list = []\n",
+    "\n",
     "for idx, price in enumerate(y_test):\n",
     "    if price <= 100000:\n",
     "        y_test[idx] = 0\n",
     "    elif price > 350000:\n",
     "        y_test[idx] = 2\n",
-    "        # tensor_list.append(torch.tensor([0.0, 0.0, 1.0]))\n",
     "    else:\n",
     "        y_test[idx] = 1\n",
-    "        # tensor_list.append(torch.tensor([0.0, 1.0, 0.0]))\n",
     "\n",
-    "# y_test = torch.stack(tensor_list)\n",
-    "print(y_train)\n",
-    "print(y_test)\n",
     "\n",
     "train_data = TensorDataset(X_train, y_train)\n",
     "test_data = TensorDataset(X_test, y_test)\n",
-    "train_loader = DataLoader(train_data, batch_size=64, shuffle=False)\n",
-    "test_loader = DataLoader(test_data, batch_size=64, shuffle=False)\n"
+    "train_loader = DataLoader(train_data, batch_size=64, shuffle=True)\n",
+    "test_loader = DataLoader(test_data, batch_size=64, shuffle=True)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -209,23 +199,16 @@
     "        self.act_fn = nn.ReLU()\n",
     "        self.linear2 = nn.Linear(64, 64)\n",
     "        self.linear3 = nn.Linear(64, 128)\n",
-    "        # self.linear4 = nn.Linear(128, 256)\n",
-    "        # self.linear5 = nn.Linear(256, 128)\n",
     "        self.linear6 = nn.Linear(128, 64)\n",
     "        self.linear7 = nn.Linear(64, 3)\n",
     "\n",
     "    def forward(self, x):\n",
-    "        # print(x.shape)\n",
     "        x = self.linear1(x)\n",
     "        x = self.act_fn(x)\n",
     "        x = self.linear2(x)\n",
     "        x = self.act_fn(x)\n",
     "        x = self.linear3(x)\n",
     "        x = self.act_fn(x)\n",
-    "        # x = self.linear4(x)\n",
-    "        # x = self.act_fn(x)\n",
-    "        # x = self.linear5(x)\n",
-    "        # x = self.act_fn(x)\n",
     "        x = self.linear6(x)\n",
     "        x = self.act_fn(x)\n",
     "        x = self.linear7(x)\n",
@@ -234,14 +217,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Inicjalizacja modelu, funkcji straty i optymizatora\n",
     "num_inputs = 33\n",
     "model = PricePredictionModel(num_inputs)\n",
-    "# model.to(device)\n",
     "model.cuda()\n",
     "criterion = nn.CrossEntropyLoss()\n",
     "optimizer = optim.Adam(model.parameters(), lr=0.01)"
@@ -249,23 +231,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch [10/100], Loss: 0.3550\n",
-      "Epoch [20/100], Loss: 0.3286\n",
-      "Epoch [30/100], Loss: 0.3450\n",
-      "Epoch [40/100], Loss: 0.3374\n",
-      "Epoch [50/100], Loss: 0.3232\n",
-      "Epoch [60/100], Loss: 0.3224\n",
-      "Epoch [70/100], Loss: 0.3174\n",
-      "Epoch [80/100], Loss: 0.3833\n",
-      "Epoch [90/100], Loss: 0.3888\n",
-      "Epoch [100/100], Loss: 0.3439\n"
+      "Epoch [10/100], Loss: 0.3091\n",
+      "Epoch [20/100], Loss: 0.2170\n",
+      "Epoch [30/100], Loss: 0.2068\n",
+      "Epoch [40/100], Loss: 0.3155\n",
+      "Epoch [50/100], Loss: 0.3107\n",
+      "Epoch [60/100], Loss: 0.5449\n",
+      "Epoch [70/100], Loss: 0.5981\n",
+      "Epoch [80/100], Loss: 0.2535\n",
+      "Epoch [90/100], Loss: 0.4366\n",
+      "Epoch [100/100], Loss: 0.5023\n"
      ]
     }
    ],
@@ -274,21 +256,11 @@
     "epochs = 100\n",
     "model.train()\n",
     "for epoch in range(epochs):\n",
-    "    # optimizer.zero_grad()\n",
-    "    # outputs = model(X_train)\n",
-    "    # loss = criterion(outputs, y_train)\n",
-    "    # loss.backward()\n",
-    "    # optimizer.step()\n",
-    "    # if (epoch+1) % 10 == 0:\n",
-    "    #     print(f'Epoch [{epoch+1}/{epochs}], Loss: {loss.item():.4f}')\n",
     "    for inputs, labels in train_loader:\n",
-    "            # inputs, labels = inputs.to(device), labels.to(device)\n",
     "            inputs = inputs.cuda()\n",
     "            labels = labels.cuda()\n",
     "            outputs = model(inputs)\n",
-    "            # print(labels.shape)\n",
-    "            # print(outputs.shape)\n",
-    "            loss = criterion(outputs, labels) #.view(-1, 1)\n",
+    "            loss = criterion(outputs, labels)\n",
     "\n",
     "            optimizer.zero_grad()\n",
     "            loss.backward()\n",
@@ -302,133 +274,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy of the model: 82.42%\n"
+      "Accuracy of the model: 84.12%\n"
      ]
     }
    ],
    "source": [
-    "# Ocena modelu na zbiorze testowym\n",
-    "# with torch.no_grad():\n",
-    "#     outputs = model(X_test)\n",
-    "#     _, predicted = torch.max(outputs, 1)\n",
-    "#     accuracy = (predicted == y_test).sum().item() / len(y_test)\n",
-    "#     print(f'Accuracy on test set: {accuracy:.2f}')\n",
-    "\n",
-    "# with torch.no_grad():\n",
-    "#     model.eval()\n",
-    "#     X_test, y_test = X_test.to(device), y_test.to(device)\n",
-    "#     y_pred = model(X_test)\n",
-    "#     test_loss = criterion(y_pred, y_test)\n",
-    "#     print(f'Final Test Loss: {test_loss.item():.4f}')\n",
-    "\n",
-    "model.eval() # Set model to eval mode\n",
+    "model.eval()\n",
     "true_preds, num_preds = 0., 0.\n",
     "\n",
-    "with torch.no_grad(): # Deactivate gradients for the following code\n",
+    "with torch.no_grad():\n",
     "    for data_inputs, data_labels in test_loader:\n",
     "\n",
-    "        # Determine prediction of model on dev set\n",
     "        data_inputs, data_labels = data_inputs.to(device), data_labels.to(device)\n",
     "        preds = model(data_inputs)\n",
     "        class_preds = torch.empty(len(data_labels), dtype=torch.float32, device='cuda')\n",
     "        for idx, pred in enumerate(preds):\n",
     "            class_preds[idx] = torch.argmax(pred)\n",
-    "        # preds = preds.squeeze(dim=1)\n",
-    "        # preds = torch.sigmoid(preds) # Sigmoid to map predictions between 0 and 1\n",
-    "        pred_labels = (preds >= 0.5).long() # Binarize predictions to 0 and 1\n",
     "\n",
-    "        # Keep records of predictions for the accuracy metric (true_preds=TP+TN, num_preds=TP+TN+FP+FN)\n",
+    "        pred_labels = (preds >= 0.5).long() \n",
+    "\n",
     "        true_preds += (class_preds == data_labels).sum()\n",
     "        num_preds += data_labels.shape[0]\n",
     "\n",
     "acc = true_preds / num_preds\n",
     "print(f\"Accuracy of the model: {100.0*acc:4.2f}%\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 46,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "IndentationError",
-     "evalue": "expected an indented block after 'for' statement on line 46 (3616003734.py, line 58)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  Cell \u001b[0;32mIn[46], line 58\u001b[0;36m\u001b[0m\n\u001b[0;31m    with torch.no_grad():\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m expected an indented block after 'for' statement on line 46\n"
-     ]
-    }
-   ],
-   "source": [
-    "import torch\n",
-    "import torch.nn as nn\n",
-    "import torch.optim as optim\n",
-    "from sklearn.datasets import load_iris\n",
-    "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.preprocessing import StandardScaler\n",
-    "\n",
-    "# Załaduj zestaw danych Iris\n",
-    "iris = load_iris()\n",
-    "X = iris.data\n",
-    "y = iris.target\n",
-    "\n",
-    "# Podział danych na zbiór treningowy i testowy\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
-    "\n",
-    "# Standaryzacja danych\n",
-    "scaler = StandardScaler()\n",
-    "X_train = scaler.fit_transform(X_train)\n",
-    "X_test = scaler.transform(X_test)\n",
-    "\n",
-    "# Konwersja danych na tensory\n",
-    "X_train = torch.tensor(X_train, dtype=torch.float32)\n",
-    "X_test = torch.tensor(X_test, dtype=torch.float32)\n",
-    "y_train = torch.tensor(y_train, dtype=torch.long)\n",
-    "y_test = torch.tensor(y_test, dtype=torch.long)\n",
-    "\n",
-    "# Definicja modelu\n",
-    "class SimpleNN(nn.Module):\n",
-    "    def __init__(self):\n",
-    "        super(SimpleNN, self).__init__()\n",
-    "        self.fc1 = nn.Linear(4, 8)  # Warstwa wejściowa\n",
-    "        self.fc2 = nn.Linear(8, 3)  # Warstwa wyjściowa\n",
-    "\n",
-    "    def forward(self, x):\n",
-    "        x = torch.relu(self.fc1(x))\n",
-    "        x = self.fc2(x)\n",
-    "        return x\n",
-    "\n",
-    "# Inicjalizacja modelu, funkcji straty i optymizatora\n",
-    "model = SimpleNN()\n",
-    "criterion = nn.CrossEntropyLoss()\n",
-    "optimizer = optim.SGD(model.parameters(), lr=0.01)\n",
-    "\n",
-    "# Trening modelu\n",
-    "epochs = 100\n",
-    "for epoch in range(epochs):\n",
-    "    # optimizer.zero_grad()\n",
-    "    # outputs = model(X_train)\n",
-    "    # loss = criterion(outputs, y_train)\n",
-    "    # loss.backward()\n",
-    "    # optimizer.step()\n",
-    "    # if (epoch+1) % 10 == 0:\n",
-    "    #     print(f'Epoch [{epoch+1}/{epochs}], Loss: {loss.item():.4f}')\n",
-    "\n",
-    "    \n",
-    "\n",
-    "# Ocena modelu na zbiorze testowym\n",
-    "with torch.no_grad():\n",
-    "    outputs = model(X_test)\n",
-    "    _, predicted = torch.max(outputs, 1)\n",
-    "    accuracy = (predicted == y_test).sum().item() / len(y_test)\n",
-    "    print(f'Accuracy on test set: {accuracy:.2f}')\n"
    ]
   }
  ],
