--- a/projekt_2/projekt_2.ipynb
+++ b/projekt_2/projekt_2.ipynb
@@ -2,9 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/usr/lib/python3/dist-packages/scipy/__init__.py:146: UserWarning: A NumPy version >=1.17.3 and <1.25.0 is required for this version of SciPy (detected version 1.26.4\n",
+      "  warnings.warn(f\"A NumPy version >={np_minversion} and <{np_maxversion}\"\n"
+     ]
+    }
+   ],
    "source": [
     "import torch\n",
     "from torch import nn, optim\n",
@@ -16,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -31,22 +40,41 @@
       " [ 1.  0.  0. ...  3.  7. 11.]\n",
       " [ 0.  0.  1. ... 10.  9. 10.]]\n",
       "[141592  51327  48672 ... 357522 312389 393805]\n",
-      "(4124, 33)\n",
+      "(4124, 27)\n",
       "(4124,)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_7367/2520507316.py:7: FutureWarning: Downcasting behavior in `replace` is deprecated and will be removed in a future version. To retain the old behavior, explicitly call `result.infer_objects(copy=False)`. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
+      "  data['TimeToSubway'] = data['TimeToSubway'].replace(mapping)\n",
+      "/tmp/ipykernel_7367/2520507316.py:8: FutureWarning: Downcasting behavior in `replace` is deprecated and will be removed in a future version. To retain the old behavior, explicitly call `result.infer_objects(copy=False)`. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
+      "  data['TimeToBusStop'] = data['TimeToBusStop'].replace(mapping)\n"
      ]
     }
    ],
    "source": [
     "device = torch.device(\"cuda\")\n",
     "data = pd.read_csv('train_data.csv')\n",
-    "data_dropped = data.drop(columns=['HallwayType','HeatingType','AptManageType','SubwayStation', 'TimeToBusStop', 'TimeToSubway'])\n",
+    "\n",
+    "# Mapowanie wartości\n",
+    "mapping = {'0-5min': 0.0, '0~5min': 0.0, '5min~10min' : 1.0, '10min~15min' : 2.0,  '15min~20min' : 3.0, 'no_bus_stop_nearby' : 4.0}\n",
+    "\n",
+    "data['TimeToSubway'] = data['TimeToSubway'].replace(mapping)\n",
+    "data['TimeToBusStop'] = data['TimeToBusStop'].replace(mapping)\n",
+    "\n",
+    "# one hot encoding\n",
+    "data_dropped = data.drop(columns=['HallwayType','HeatingType','AptManageType','SubwayStation'])\n",
+    "\n",
     "pd_HallwayTypepd = pd.get_dummies(data['HallwayType'],  dtype=float)\n",
     "pd_HeatingType = pd.get_dummies(data['HeatingType'],  dtype=float)\n",
     "pd_AptManageType = pd.get_dummies(data['AptManageType'],  dtype=float)\n",
     "pd_SubwayStation = pd.get_dummies(data['SubwayStation'],  dtype=float)\n",
-    "pd_TimeToSubway = pd.get_dummies(data['TimeToSubway'],  dtype=float)\n",
-    "pd_TimeToBusStop = pd.get_dummies(data['TimeToBusStop'],  dtype=float)\n",
-    "data_encoded = pd.concat([pd_HallwayTypepd,pd_HeatingType ,pd_AptManageType,pd_SubwayStation,pd_TimeToSubway,pd_TimeToBusStop , data_dropped], axis=1, join='outer')\n",
+    "\n",
+    "\n",
+    "data_encoded = pd.concat([pd_HallwayTypepd,pd_HeatingType ,pd_AptManageType,pd_SubwayStation, data_dropped], axis=1, join='outer')\n",
     "X = data_encoded.drop(columns=['SalePrice']).values\n",
     "Y = data_encoded['SalePrice'].values\n",
     "print(X)\n",
@@ -57,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -70,29 +98,48 @@
       "        ...,\n",
       "        [ 0.,  1.,  0.,  ...,  4., 14., 17.],\n",
       "        [ 0.,  0.,  1.,  ...,  8.,  7.,  9.],\n",
-      "        [ 0.,  1.,  0.,  ...,  4., 14., 17.]])\n"
+      "        [ 0.,  1.,  0.,  ...,  4., 14., 17.]])\n",
+      "<torch.utils.data.dataloader.DataLoader object at 0x76503b029900>\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_7367/4171704164.py:5: FutureWarning: Downcasting behavior in `replace` is deprecated and will be removed in a future version. To retain the old behavior, explicitly call `result.infer_objects(copy=False)`. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
+      "  test['TimeToSubway'] = test['TimeToSubway'].replace(mapping)\n",
+      "/tmp/ipykernel_7367/4171704164.py:6: FutureWarning: Downcasting behavior in `replace` is deprecated and will be removed in a future version. To retain the old behavior, explicitly call `result.infer_objects(copy=False)`. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
+      "  test['TimeToBusStop'] = test['TimeToBusStop'].replace(mapping)\n"
      ]
     }
    ],
    "source": [
-    "test_data = pd.read_csv('test_data.csv')\n",
-    "test_data_dropped = test_data.drop(columns=['HallwayType','HeatingType','AptManageType','SubwayStation', 'TimeToBusStop', 'TimeToSubway'])\n",
-    "pd_HallwayTypepd = pd.get_dummies(test_data['HallwayType'],  dtype=float)\n",
-    "pd_HeatingType = pd.get_dummies(test_data['HeatingType'],  dtype=float)\n",
-    "pd_AptManageType = pd.get_dummies(test_data['AptManageType'],  dtype=float)\n",
-    "pd_SubwayStation = pd.get_dummies(test_data['SubwayStation'],  dtype=float)\n",
-    "pd_TimeToSubway = pd.get_dummies(test_data['TimeToSubway'],  dtype=float)\n",
-    "pd_TimeToBusStop = pd.get_dummies(test_data['TimeToBusStop'],  dtype=float)\n",
-    "test_data_encoded = pd.concat([pd_HallwayTypepd,pd_HeatingType ,pd_AptManageType,pd_SubwayStation,pd_TimeToSubway,pd_TimeToBusStop , test_data_dropped], axis=1, join='outer')\n",
+    "test = pd.read_csv('test_data.csv')\n",
     "\n",
-    "test_data = test_data_encoded.astype('float32')\n",
-    "test_data = torch.from_numpy(test_data.values[:,:])\n",
-    "print(test_data)"
+    "# Mapowanie wartości\n",
+    "\n",
+    "test['TimeToSubway'] = test['TimeToSubway'].replace(mapping)\n",
+    "test['TimeToBusStop'] = test['TimeToBusStop'].replace(mapping)\n",
+    "\n",
+    "# one hot encoding\n",
+    "test_dropped = test.drop(columns=['HallwayType','HeatingType','AptManageType','SubwayStation'])\n",
+    "pd_HallwayTypepd = pd.get_dummies(test['HallwayType'],  dtype=float)\n",
+    "pd_HeatingType = pd.get_dummies(test['HeatingType'],  dtype=float)\n",
+    "pd_AptManageType = pd.get_dummies(test['AptManageType'],  dtype=float)\n",
+    "pd_SubwayStation = pd.get_dummies(test['SubwayStation'],  dtype=float)\n",
+    "test_encoded = pd.concat([pd_HallwayTypepd,pd_HeatingType ,pd_AptManageType,pd_SubwayStation, test_dropped], axis=1, join='outer')\n",
+    "\n",
+    "test = test_encoded.astype('float32')\n",
+    "test = torch.from_numpy(test.values[:,:])\n",
+    "print(test)\n",
+    "\n",
+    "test_loader_test = DataLoader(test, batch_size=64, shuffle=False)\n",
+    "print(test_loader_test)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -197,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -234,12 +281,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Inicjalizacja modelu, funkcji straty i optymizatora\n",
-    "num_inputs = 33\n",
+    "num_inputs = 27\n",
     "model = PricePredictionModel(num_inputs)\n",
     "# model.to(device)\n",
     "model.cuda()\n",
@@ -249,40 +296,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch [10/100], Loss: 0.3550\n",
-      "Epoch [20/100], Loss: 0.3286\n",
-      "Epoch [30/100], Loss: 0.3450\n",
-      "Epoch [40/100], Loss: 0.3374\n",
-      "Epoch [50/100], Loss: 0.3232\n",
-      "Epoch [60/100], Loss: 0.3224\n",
-      "Epoch [70/100], Loss: 0.3174\n",
-      "Epoch [80/100], Loss: 0.3833\n",
-      "Epoch [90/100], Loss: 0.3888\n",
-      "Epoch [100/100], Loss: 0.3439\n"
+      "Epoch [10/70], Loss: 0.3420\n",
+      "Epoch [20/70], Loss: 0.3332\n",
+      "Epoch [30/70], Loss: 0.3383\n",
+      "Epoch [40/70], Loss: 0.2787\n",
+      "Epoch [50/70], Loss: 0.2813\n",
+      "Epoch [60/70], Loss: 0.3224\n",
+      "Epoch [70/70], Loss: 0.2942\n"
      ]
     }
    ],
    "source": [
     "# Trening modelu\n",
-    "epochs = 100\n",
+    "epochs = 70\n",
     "model.train()\n",
     "for epoch in range(epochs):\n",
-    "    # optimizer.zero_grad()\n",
-    "    # outputs = model(X_train)\n",
-    "    # loss = criterion(outputs, y_train)\n",
-    "    # loss.backward()\n",
-    "    # optimizer.step()\n",
-    "    # if (epoch+1) % 10 == 0:\n",
-    "    #     print(f'Epoch [{epoch+1}/{epochs}], Loss: {loss.item():.4f}')\n",
     "    for inputs, labels in train_loader:\n",
-    "            # inputs, labels = inputs.to(device), labels.to(device)\n",
+    "            inputs, labels = inputs.to(device), labels.to(device)\n",
     "            inputs = inputs.cuda()\n",
     "            labels = labels.cuda()\n",
     "            outputs = model(inputs)\n",
@@ -302,38 +339,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy of the model: 82.42%\n"
+      "Accuracy of the model: 83.52%\n"
      ]
     }
    ],
    "source": [
-    "# Ocena modelu na zbiorze testowym\n",
-    "# with torch.no_grad():\n",
-    "#     outputs = model(X_test)\n",
-    "#     _, predicted = torch.max(outputs, 1)\n",
-    "#     accuracy = (predicted == y_test).sum().item() / len(y_test)\n",
-    "#     print(f'Accuracy on test set: {accuracy:.2f}')\n",
     "\n",
-    "# with torch.no_grad():\n",
-    "#     model.eval()\n",
-    "#     X_test, y_test = X_test.to(device), y_test.to(device)\n",
-    "#     y_pred = model(X_test)\n",
-    "#     test_loss = criterion(y_pred, y_test)\n",
-    "#     print(f'Final Test Loss: {test_loss.item():.4f}')\n",
     "\n",
     "model.eval() # Set model to eval mode\n",
     "true_preds, num_preds = 0., 0.\n",
     "\n",
     "with torch.no_grad(): # Deactivate gradients for the following code\n",
     "    for data_inputs, data_labels in test_loader:\n",
-    "\n",
     "        # Determine prediction of model on dev set\n",
     "        data_inputs, data_labels = data_inputs.to(device), data_labels.to(device)\n",
     "        preds = model(data_inputs)\n",
@@ -354,81 +378,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 86,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "IndentationError",
-     "evalue": "expected an indented block after 'for' statement on line 46 (3616003734.py, line 58)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  Cell \u001b[0;32mIn[46], line 58\u001b[0;36m\u001b[0m\n\u001b[0;31m    with torch.no_grad():\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m expected an indented block after 'for' statement on line 46\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "import torch\n",
-    "import torch.nn as nn\n",
-    "import torch.optim as optim\n",
-    "from sklearn.datasets import load_iris\n",
-    "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.preprocessing import StandardScaler\n",
-    "\n",
-    "# Załaduj zestaw danych Iris\n",
-    "iris = load_iris()\n",
-    "X = iris.data\n",
-    "y = iris.target\n",
-    "\n",
-    "# Podział danych na zbiór treningowy i testowy\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
-    "\n",
-    "# Standaryzacja danych\n",
-    "scaler = StandardScaler()\n",
-    "X_train = scaler.fit_transform(X_train)\n",
-    "X_test = scaler.transform(X_test)\n",
-    "\n",
-    "# Konwersja danych na tensory\n",
-    "X_train = torch.tensor(X_train, dtype=torch.float32)\n",
-    "X_test = torch.tensor(X_test, dtype=torch.float32)\n",
-    "y_train = torch.tensor(y_train, dtype=torch.long)\n",
-    "y_test = torch.tensor(y_test, dtype=torch.long)\n",
-    "\n",
-    "# Definicja modelu\n",
-    "class SimpleNN(nn.Module):\n",
-    "    def __init__(self):\n",
-    "        super(SimpleNN, self).__init__()\n",
-    "        self.fc1 = nn.Linear(4, 8)  # Warstwa wejściowa\n",
-    "        self.fc2 = nn.Linear(8, 3)  # Warstwa wyjściowa\n",
-    "\n",
-    "    def forward(self, x):\n",
-    "        x = torch.relu(self.fc1(x))\n",
-    "        x = self.fc2(x)\n",
-    "        return x\n",
-    "\n",
-    "# Inicjalizacja modelu, funkcji straty i optymizatora\n",
-    "model = SimpleNN()\n",
-    "criterion = nn.CrossEntropyLoss()\n",
-    "optimizer = optim.SGD(model.parameters(), lr=0.01)\n",
-    "\n",
-    "# Trening modelu\n",
-    "epochs = 100\n",
-    "for epoch in range(epochs):\n",
-    "    # optimizer.zero_grad()\n",
-    "    # outputs = model(X_train)\n",
-    "    # loss = criterion(outputs, y_train)\n",
-    "    # loss.backward()\n",
-    "    # optimizer.step()\n",
-    "    # if (epoch+1) % 10 == 0:\n",
-    "    #     print(f'Epoch [{epoch+1}/{epochs}], Loss: {loss.item():.4f}')\n",
-    "\n",
-    "    \n",
-    "\n",
-    "# Ocena modelu na zbiorze testowym\n",
-    "with torch.no_grad():\n",
-    "    outputs = model(X_test)\n",
-    "    _, predicted = torch.max(outputs, 1)\n",
-    "    accuracy = (predicted == y_test).sum().item() / len(y_test)\n",
-    "    print(f'Accuracy on test set: {accuracy:.2f}')\n"
+    "model.eval()\n",
+    "true_preds, num_preds = 0., 0.\n",
+    "total_loss = 0\n",
+    "with open('wyniki.csv', 'w') as f:\n",
+    "  write = csv.writer(f)\n",
+    "  with torch.no_grad():\n",
+    "      \n",
+    "      for data_inputs in test_loader_test:\n",
+    "        # Determine prediction of model on dev set\n",
+    "        data_inputs = data_inputs.to(device)\n",
+    "        preds = model(data_inputs)\n",
+    "        class_preds = torch.empty(len(data_inputs), dtype=torch.float32, device='cuda')\n",
+    "        for idx, pred in enumerate(preds):\n",
+    "            class_preds[idx] = torch.argmax(pred)  \n",
+    "            write.writerow([int(class_preds[idx].item())])"
    ]
   }
  ],
