dziala zapisywanie do csv

--- a/projekt_3/projekt_3.ipynb
+++ b/projekt_3/projekt_3.ipynb
@@ -85,15 +85,6 @@
     "                                           shuffle=False, num_workers=16)\n",
     "\n",
     "\n",
-    "# test_dataset = ImageFolder('test_all', transform=transform)\n",
-    "\n",
-    "# test_all_set = DatasetFolder(\"test_all/\", loader=lambda x: Image.open(x), extensions=\"jpg\", transform=transform)\n",
-    "\n",
-    "\n",
-    "# test_all_loader = torch.utils.data.DataLoader(test_all_set, batch_size=batch_size,\n",
-    "#                                          shuffle=False, num_workers=16)\n",
-    "\n",
-    "\n",
     "classes = trainset.classes"
    ]
   },
@@ -219,9 +210,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/natalia/.local/lib/python3.10/site-packages/torch/utils/data/dataloader.py:558: UserWarning: This DataLoader will create 16 worker processes in total. Our suggested max number of worker in current system is 8, which is smaller than what this DataLoader is going to create. Please be aware that excessive worker creation might get DataLoader running slow or even freeze, lower the worker number to avoid potential slowness/freeze if necessary.\n",
+      "  warnings.warn(_create_warning_msg(\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -231,6 +230,7 @@
     }
    ],
    "source": [
+    "net.eval()\n",
     "correct = 0\n",
     "total = 0\n",
     "with torch.no_grad():\n",
@@ -334,6 +334,53 @@
     "    accuracy = 100 * float(correct_count) / total_pred[classname]\n",
     "    print(\"Accuracy for class {:5s} is: {:.1f} %\".format(classname, \n",
     "                                                   accuracy))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "from PIL import Image\n",
+    "import os\n",
+    "import csv\n",
+    "\n",
+    "\n",
+    "# Lista obrazów w folderze\n",
+    "image_files = os.listdir('test_all')\n",
+    "\n",
+    "# Ścieżka do pliku CSV\n",
+    "csv_file = \"wyniki.csv\"\n",
+    "\n",
+    "# Otwieramy plik CSV w trybie zapisu\n",
+    "with open(csv_file, mode='w', newline='') as file:\n",
+    "    writer = csv.writer(file)\n",
+    "\n",
+    "    # Iterujemy po obrazach\n",
+    "    for image_file in image_files:\n",
+    "        # Ładujemy obraz\n",
+    "        image_path = os.path.join('test_all', image_file)\n",
+    "        image = Image.open(image_path).convert('RGB')\n",
+    "\n",
+    "        # Stosujemy transformacje\n",
+    "        image = transform(image)\n",
+    "\n",
+    "        # Dodajemy wymiar batcha (zgodnie z oczekiwaniami modelu)\n",
+    "        image = image.unsqueeze(0)\n",
+    "        image = image.to(device)\n",
+    "\n",
+    "        # Przekazujemy obraz przez sieć\n",
+    "        with torch.no_grad():\n",
+    "            outputs = net(image)\n",
+    "\n",
+    "        # Wybieramy klasę o najwyższym prawdopodobieństwie\n",
+    "        _, predicted = torch.max(outputs, 1)\n",
+    "        class_index = predicted.item()\n",
+    "\n",
+    "        # Zapisujemy nazwę pliku i klasę do pliku CSV\n",
+    "        writer.writerow([image_file, class_index])"
    ]
   }
  ],
