--- a/projekt_3/projekt_3.ipynb
+++ b/projekt_3/projekt_3.ipynb
@@ -274,29 +274,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1/10] loss: 1.310\n",
-      "[2/10] loss: 1.292\n",
-      "[3/10] loss: 1.284\n",
-      "[4/10] loss: 1.266\n",
-      "[5/10] loss: 1.254\n",
-      "[6/10] loss: 1.246\n",
-      "[7/10] loss: 1.231\n",
-      "[8/10] loss: 1.216\n",
-      "[9/10] loss: 1.212\n",
-      "[10/10] loss: 1.193\n",
+      "[1/10] loss: 1.259\n",
+      "[2/10] loss: 1.250\n",
+      "[3/10] loss: 1.250\n",
+      "[4/10] loss: 1.244\n",
+      "[5/10] loss: 1.245\n",
+      "[6/10] loss: 1.239\n",
+      "[7/10] loss: 1.240\n",
+      "[8/10] loss: 1.228\n",
+      "[9/10] loss: 1.228\n",
+      "[10/10] loss: 1.224\n",
       "Finished Training\n"
      ]
     }
    ],
    "source": [
     "losses = []\n",
+    "net.train()\n",
     "size = len(train_loader)\n",
     "for epoch in range(10):  # loop over the dataset multiple times\n",
     "\n",
@@ -328,14 +329,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy of the network on the 10000 test images: 49 %\n"
+      "Accuracy of the network on the 10000 test images: 50 %\n"
      ]
     }
    ],
@@ -496,96 +497,74 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "5\n",
-      "6\n",
-      "7\n"
-     ]
-    },
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[36], line 57\u001b[0m\n\u001b[1;32m     55\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;241m5\u001b[39m,\u001b[38;5;241m50\u001b[39m):\n\u001b[1;32m     56\u001b[0m     \u001b[38;5;28mprint\u001b[39m(i)\n\u001b[0;32m---> 57\u001b[0m     train_loss_list\u001b[38;5;241m.\u001b[39mappend(\u001b[43mtrain\u001b[49m\u001b[43m(\u001b[49m\u001b[43mi\u001b[49m\u001b[43m)\u001b[49m)\n\u001b[1;32m     58\u001b[0m     test_loss_list\u001b[38;5;241m.\u001b[39mappend(test())\n\u001b[1;32m     60\u001b[0m plt\u001b[38;5;241m.\u001b[39mplot(train_loss_list, label\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mtrain\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
-      "Cell \u001b[0;32mIn[36], line 18\u001b[0m, in \u001b[0;36mtrain\u001b[0;34m(epoch)\u001b[0m\n\u001b[1;32m     16\u001b[0m outputs \u001b[38;5;241m=\u001b[39m net(inputs)\n\u001b[1;32m     17\u001b[0m loss \u001b[38;5;241m=\u001b[39m criterion(outputs, labels)\n\u001b[0;32m---> 18\u001b[0m \u001b[43mloss\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mbackward\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     19\u001b[0m optimizer\u001b[38;5;241m.\u001b[39mstep()\n\u001b[1;32m     21\u001b[0m \u001b[38;5;66;03m# print statistics\u001b[39;00m\n",
-      "File \u001b[0;32m~/.local/lib/python3.10/site-packages/torch/_tensor.py:522\u001b[0m, in \u001b[0;36mTensor.backward\u001b[0;34m(self, gradient, retain_graph, create_graph, inputs)\u001b[0m\n\u001b[1;32m    512\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m has_torch_function_unary(\u001b[38;5;28mself\u001b[39m):\n\u001b[1;32m    513\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m handle_torch_function(\n\u001b[1;32m    514\u001b[0m         Tensor\u001b[38;5;241m.\u001b[39mbackward,\n\u001b[1;32m    515\u001b[0m         (\u001b[38;5;28mself\u001b[39m,),\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    520\u001b[0m         inputs\u001b[38;5;241m=\u001b[39minputs,\n\u001b[1;32m    521\u001b[0m     )\n\u001b[0;32m--> 522\u001b[0m \u001b[43mtorch\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mautograd\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mbackward\u001b[49m\u001b[43m(\u001b[49m\n\u001b[1;32m    523\u001b[0m \u001b[43m    \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mgradient\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mretain_graph\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mcreate_graph\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43minputs\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43minputs\u001b[49m\n\u001b[1;32m    524\u001b[0m \u001b[43m\u001b[49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[0;32m~/.local/lib/python3.10/site-packages/torch/autograd/__init__.py:266\u001b[0m, in \u001b[0;36mbackward\u001b[0;34m(tensors, grad_tensors, retain_graph, create_graph, grad_variables, inputs)\u001b[0m\n\u001b[1;32m    261\u001b[0m     retain_graph \u001b[38;5;241m=\u001b[39m create_graph\n\u001b[1;32m    263\u001b[0m \u001b[38;5;66;03m# The reason we repeat the same comment below is that\u001b[39;00m\n\u001b[1;32m    264\u001b[0m \u001b[38;5;66;03m# some Python versions print out the first line of a multi-line function\u001b[39;00m\n\u001b[1;32m    265\u001b[0m \u001b[38;5;66;03m# calls in the traceback and some print out the last line\u001b[39;00m\n\u001b[0;32m--> 266\u001b[0m \u001b[43mVariable\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_execution_engine\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mrun_backward\u001b[49m\u001b[43m(\u001b[49m\u001b[43m  \u001b[49m\u001b[38;5;66;43;03m# Calls into the C++ engine to run the backward pass\u001b[39;49;00m\n\u001b[1;32m    267\u001b[0m \u001b[43m    \u001b[49m\u001b[43mtensors\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    268\u001b[0m \u001b[43m    \u001b[49m\u001b[43mgrad_tensors_\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    269\u001b[0m \u001b[43m    \u001b[49m\u001b[43mretain_graph\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    270\u001b[0m \u001b[43m    \u001b[49m\u001b[43mcreate_graph\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    271\u001b[0m \u001b[43m    \u001b[49m\u001b[43minputs\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    272\u001b[0m \u001b[43m    \u001b[49m\u001b[43mallow_unreachable\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mTrue\u001b[39;49;00m\u001b[43m,\u001b[49m\n\u001b[1;32m    273\u001b[0m \u001b[43m    \u001b[49m\u001b[43maccumulate_grad\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mTrue\u001b[39;49;00m\u001b[43m,\u001b[49m\n\u001b[1;32m    274\u001b[0m \u001b[43m\u001b[49m\u001b[43m)\u001b[49m\n",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "def train(epoch):\n",
-    "    losses = []\n",
-    "    size = len(train_loader)\n",
-    "    for epoch in range(epoch):  # loop over the dataset multiple times\n",
+    "# def train(epoch):\n",
+    "#     losses = []\n",
+    "#     size = len(train_loader)\n",
+    "#     for epoch in range(epoch):  # loop over the dataset multiple times\n",
     "\n",
-    "        running_loss = 0.0\n",
-    "        for i, data in enumerate(train_loader, 0):\n",
-    "            # get the inputs; data is a list of [inputs, labels]\n",
-    "            inputs, labels = data\n",
-    "            inputs, labels = inputs.to(device), labels.to(device)\n",
+    "#         running_loss = 0.0\n",
+    "#         for i, data in enumerate(train_loader, 0):\n",
+    "#             # get the inputs; data is a list of [inputs, labels]\n",
+    "#             inputs, labels = data\n",
+    "#             inputs, labels = inputs.to(device), labels.to(device)\n",
     "\n",
-    "            # zero the parameter gradients\n",
-    "            optimizer.zero_grad()\n",
+    "#             # zero the parameter gradients\n",
+    "#             optimizer.zero_grad()\n",
     "\n",
-    "            # forward + backward + optimize\n",
-    "            outputs = net(inputs)\n",
-    "            loss = criterion(outputs, labels)\n",
-    "            loss.backward()\n",
-    "            optimizer.step()\n",
+    "#             # forward + backward + optimize\n",
+    "#             outputs = net(inputs)\n",
+    "#             loss = criterion(outputs, labels)\n",
+    "#             loss.backward()\n",
+    "#             optimizer.step()\n",
     "\n",
-    "            # print statistics\n",
-    "            running_loss += loss.item()\n",
+    "#             # print statistics\n",
+    "#             running_loss += loss.item()\n",
     "        \n",
-    "        epoch_loss = running_loss / size\n",
-    "        # print('[%d/10] loss: %.3f' %\n",
-    "        #     (epoch+1 ,  epoch_loss))\n",
-    "        losses.append(epoch_loss)\n",
+    "#         epoch_loss = running_loss / size\n",
+    "#         # print('[%d/10] loss: %.3f' %\n",
+    "#         #     (epoch+1 ,  epoch_loss))\n",
+    "#         losses.append(epoch_loss)\n",
     "\n",
-    "    # print('Finished Training')\n",
-    "    return epoch_loss\n",
+    "#     # print('Finished Training')\n",
+    "#     return epoch_loss\n",
     "\n",
-    "def test():\n",
-    "    net.eval()\n",
-    "    correct = 0\n",
-    "    total = 0\n",
-    "    with torch.no_grad():\n",
-    "        running_loss = 0.0\n",
-    "        for data in test_loader:\n",
-    "            images, labels = data\n",
-    "            images = images.to(device)\n",
-    "            # calculate outputs by running images through the network \n",
-    "            outputs = net(images).cpu()\n",
-    "            loss = criterion(outputs, labels)\n",
-    "            running_loss += loss.item()\n",
-    "            # the class with the highest energy is what we choose as prediction\n",
-    "            _, predicted = torch.max(outputs.data, 1)\n",
-    "            total += labels.size(0)\n",
-    "            correct += (predicted == labels).sum().item()\n",
-    "    # print('Accuracy of the network on the 10000 test images: %d %%' % (\n",
-    "    #     100 * correct / total))\n",
-    "    return running_loss / len(test_loader)\n",
+    "# def test():\n",
+    "#     net.eval()\n",
+    "#     correct = 0\n",
+    "#     total = 0\n",
+    "#     with torch.no_grad():\n",
+    "#         running_loss = 0.0\n",
+    "#         for data in test_loader:\n",
+    "#             images, labels = data\n",
+    "#             images = images.to(device)\n",
+    "#             # calculate outputs by running images through the network \n",
+    "#             outputs = net(images).cpu()\n",
+    "#             loss = criterion(outputs, labels)\n",
+    "#             running_loss += loss.item()\n",
+    "#             # the class with the highest energy is what we choose as prediction\n",
+    "#             _, predicted = torch.max(outputs.data, 1)\n",
+    "#             total += labels.size(0)\n",
+    "#             correct += (predicted == labels).sum().item()\n",
+    "#     # print('Accuracy of the network on the 10000 test images: %d %%' % (\n",
+    "#     #     100 * correct / total))\n",
+    "#     return running_loss / len(test_loader)\n",
     "\n",
-    "train_loss_list = []\n",
-    "test_loss_list = []\n",
-    "for i in range(5,50):\n",
-    "    print(i)\n",
-    "    train_loss_list.append(train(i))\n",
-    "    test_loss_list.append(test())\n",
+    "# train_loss_list = []\n",
+    "# test_loss_list = []\n",
+    "# for i in range(5,50):\n",
+    "#     print(i)\n",
+    "#     train_loss_list.append(train(i))\n",
+    "#     test_loss_list.append(test())\n",
     "\n",
-    "plt.plot(train_loss_list, label='train')\n",
-    "plt.plot(test_loss_list, label='test')\n",
-    "plt.legend()\n"
+    "# plt.plot(train_loss_list, label='train')\n",
+    "# plt.plot(test_loss_list, label='test')\n",
+    "# plt.legend()\n",
+    "\n",
+    "\n"
    ]
   }
  ],
